Fixed bug where the albul id wasn't correctly passed to its pictures when adding these pictures
Found bug where only one album in a category is shown in albumview when the category actually has more albums
Further extented the album view: the albums are now clickable and activate that particular album
Fixed bug in resizer where it was possible the up handler went back up when keep going down with the mouse resulting in very strange behaviour
Fixed bug in resizer where the right handle wasn't positioned to the total right of the picture at resizer launch
Made syncing better: modifications on the server side are now also passed through to the client correctly
Fixed bug where it wasn't possible to load the pictures of the selected album in the picturelist when there was only one album in the tree
Introduced albumview: if a category is selected, the first picture of every album is shown
Added scrollbars to the editors so large pictures can be edited as well
Added scrollbars to the explorer so large pictures can fit in as well
Enhanced the synchronisation: JCpg now knows when to generate insert and modify queries
Fixed load gallery bug where the ctime was loaded as an integer instead of a long value
Fixed major bug in the displaying of the pictures in the RHS. The cachproblem is gone and the gridbag layout manager is now working and used properly
Synchronization of categories from client to server is now possible, I'm now waiting for some functionallity of the API to fetch the id of a newly uploaded component so this feature will fully work
Fixed bug in synchronization of categories from server to client where sometimes the type of the parent node wasn't correct when searching for a certain node in the tree
Synchronization of categories from server to client is now possible
Fixed a bug in the resizer where it was possible for the lower line to go too far, under the picture